# bit-office

./: .gitignore  CLAUDE.md  MULTI-AGENT-COORDINATION.md  README.md  SOUL.md  package.json  pnpm-lock.yaml  team-workflow.md
.next/: trace  trace-build
apps/desktop/: package.json
apps/desktop/scripts/: build-desktop.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/gateway/: .env.example  package.json
apps/gateway/src/: backends.ts  config.ts  external-output-reader.ts  file-logger.ts  index.ts  process-scanner.ts  runtime-state.ts  setup.ts  team-state.ts  telegram-channel.ts  transport.ts  tunnel.ts  ws-server.ts
apps/web/: components.json  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/public/: manifest.json  sw.js
docs/specs/: 2026-03-24-plugin-architecture-design.md  2026-03-24-plugin-architecture-plan.md  2026-03-26-product-roadmap-v2.md  2026-03-27-auto-review-plan.md  2026-03-27-plugin-architecture-guide.md  2026-03-27-plugin-architecture-summary.md  2026-03-27-replay-share-plan.md  2026-03-27-wiring-plan.md  2026-03-28-memory-dashboard.md  2026-03-28-productivity-dashboard.md  2026-03-28-project-templates.md
gravity-balls/: index.html
landing-page/: index.html
merge-test-2/: index.html
pixel-clock/: index.html
scripts/: install-agents.sh  install-desktop.sh
soul-slim/: SOUL.md
test-change/: index.html
ux-audit/: AUDIT.md
wave-synth/: index.html
(+122 files in other folders)
